--- a/style.css
+++ b/style.css
@@ -23,3 +23,20 @@ body {}
     left: 1000px;
     top: 40px;
 }
+
+button {
+    background-color: rgb(17, 104, 161);
+    color: white;
+    height: 3em;
+    min-width: 5em;
+    border-radius: 5px;
+    border-width: 0;
+    margin-left: 2em;
+    margin-top: 4em;
+    cursor: pointer;
+}
+
+button:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+}
